--- a/portfoliostyle.css
+++ b/portfoliostyle.css
@@ -4,6 +4,7 @@
     width: 274px;
     margin: 20px 0 25px;
     overflow: auto;
+    height: 205px;
   }
   
   .work:nth-child(even) {
@@ -14,6 +15,10 @@
     width: 100%;
     border: 0 none;
     opacity: 0.8;
+    height: 205px;
+  }
+  #gif-img{
+    float: left;
   }
   
   .work h3 {
@@ -33,7 +38,7 @@
   .auth-image {
     float: left;
     width: 200px;
-    height: auto;
+    height: 205px;
     margin-top: 10px;
     margin-right: 25px;
   }
